# Sequelizer

./: .gitignore  CMakeLists.txt  LICENSE  LINUX_PORT.md  README.md  test_text.txt
docs/: _config.yml  fast5_compatibility.md  getting-started.md  index.md  sequelizer_commands.md
docs/_layouts/: default.html
docs/archive/: README.txt  old-getting-started.md  old-index.md
docs/commands/: convert.md  fast5.md  plot.md  seqgen.md
docs/guides/: architecture.md  contributing.md  examples.md
include/: sequelizer.h
src/: sequelizer.c  sequelizer_convert.c  sequelizer_convert.h  sequelizer_fast5.c  sequelizer_fast5.h  sequelizer_plot.c  sequelizer_plot.h  sequelizer_seqgen.c  sequelizer_seqgen.h  sequelizer_subcommands.c  sequelizer_subcommands.h
src/core/: fast5_convert.c  fast5_convert.h  fast5_io.c  fast5_io.h  fast5_stats.c  fast5_stats.h  fast5_utils.c  fast5_utils.h  kmer_model_loader.c  kmer_model_loader.h  plot_utils.c  plot_utils.h  seq_matrix.c  seq_matrix.h  seq_tensor.c  seq_tensor.h  seq_utils.c  seq_utils.h  seqgen_models.c  seqgen_models.h  seqgen_utils.c  seqgen_utils.h  siggen_utils.c  siggen_utils.h  util.c  util.h
test/: test_kmer_loader.c  test_seqgen.c  test_seqgen_models.c
